--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,26 @@ cython_debug/
 .vscode
 /node_modules
 docs/.vitepress/cache
+
+# Node.js 特定忽略
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+.npm
+.yarn-integrity
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 爬虫项目特定忽略
+/temp/
+/browser_data/
+/data/
+*_qrcode.png
+*_cookies.json
+/kuaishou_user_data_dir/
+/node/temp/
+/node/browser_data/
+/node/data/
