--- a/node/package.json
+++ b/node/package.json
@@ -24,6 +24,7 @@
     "http-proxy-agent": "^6.1.0",
     "https-proxy-agent": "^7.0.1",
     "moment": "^2.29.4",
+    "node-schedule": "^2.1.1",
     "p-limit": "^3.1.0",
     "playwright": "^1.38.1",
     "qrcode": "^1.5.3",
