feat: 基础登录功能测试完成

--- a/node/config.json
+++ b/node/config.json
@@ -10,7 +10,7 @@
   "max_comment_pages": 3,
   "get_comments": true,
   "get_video_detail": true,
-  "headless": true,
+  "headless": false,
   "use_proxy": false,
   "ip_proxy_info": {
     "ip": "",
