--- a/node/package.json
+++ b/node/package.json
@@ -23,13 +23,17 @@
     "dotenv": "^16.3.1",
     "http-proxy-agent": "^6.1.0",
     "https-proxy-agent": "^7.0.1",
+    "jimp": "^1.6.0",
+    "jsqr": "^1.4.0",
     "moment": "^2.29.4",
     "node-schedule": "^2.1.1",
     "p-limit": "^3.1.0",
     "playwright": "^1.38.1",
     "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
     "tough-cookie": "^4.1.3",
-    "user-agents": "^1.0.1444"
+    "user-agents": "^1.0.1444",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
